Fix link resolution for newer javadocs